# ChangeLog for Gentoo System Intialization ("rc") scripts
# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPLv2

  30 Oct 2007; Roy Marples <uberlord@gentoo.org>:

    You can now spoof the source address for arping as the third parameter
    in gateways_eth0 if you have arping2 installed, #180888.

  29 Oct 2007; Roy Marples <uberlord@gentoo.org>:

    rc --override foo will override the runlevel to load after boot
    or single user runlevels to avoid rc recursion, #196338

    /etc/mtab is now a true reflection on /proc/mounts.
    The only exception is that we punt any / on tmpfs entry, #194615.

    Network config arrays are now split by embedded new lines instead of
    being evaled into space separated values. This makes it easier to read,
    maintain and document as discussed on gentoo-dev.

  23 Oct 2007; Roy Marples <uberlord@gentoo.org>:

    clock init script now works with busybox hwclock.
    clock init script now handles /etc/adjtime correctly.
    CLOCK_ADJTIME hinted that it could change the location of /etc/adjtime.
    This is not the case.

  19 Oct 2007; Roy Marples <uberlord@gentoo.org>:

    Mount /dev/shm for Linux systems, even not when in /etc/fstab, #196345.

  16 Oct 2007; Roy Marples <uberlord@gentoo.org>:

    We now build and optionally work with static libraries.

  15 Oct 2007; Roy Marples <uberlord@gentoo.org>:

    rc-status now orders services in start order, #195630

* baselayout-2.0.0_rc5 (11 Oct 2007)

  11 Oct 2007; Roy Marples <uberlord@gentoo.org>:

    Bump librc and libeinfo to .so.1
    If / block device as in /etc/fstab does not exist, use /dev/root if
    it's available in checkroot, #171593.

  09 Oct 2007; Roy Marples <uberlord@gentoo.org>:

    netmount, localmount, halt.sh and net scripts now check OS specific flags
    to see if a mount is network mounted (linux = fstab, *bsd = "local" in
    mount options) or not, #192772.
    txqueuelen_eth0= now works, #190538.
